--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.nabBar{
+    display: flex;
+    background-color: darkslateblue;
+    position: fixed;
+    justify-content: end;
+    top:0;
+    height: 45px;
+    width: 100%;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .nabBar li {
+    list-style: none;
+    margin: 5px;
+    padding: 5px;
   }
-  to {
-    transform: rotate(360deg);
+  button{
+    border: none;
+    color: white;
+    font-weight: bold;
+    align-items: center;
+    background-color : transparent;
+    font-size: 18px;
+    cursor: pointer;
   }
-}
+  .form {
+    border-radius: 20px;
+    box-sizing: border-box;
+    padding: 30px;
+    height: 100%;
+    width: 100%;
+    background-color: darkslateblue;
+    color: white;
+  }
+
+  .logPlace{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0;
+    width: 100%;
+    height: 60vw;
+    padding: 100px;
+    border-radius: 5px;
+    background-color: lightblue;
+  }
+  .form-control{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+
+
+  .submit {
+    background-color: #08d;
+    border-radius: 12px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    cursor: pointer;
+    font-size: 18px;
+    height: 50px;
+    margin-top: 38px;
+    outline: 0;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .submit:active {
+    background-color: #06b;
+  }
+  input{
+    border-radius: 7px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    font-size: 18px;
+    height: 100%;
+    outline: 0;
+    padding: 4px 20px 0;
+    width: 100%;
+  }
+    
