--- a/src/App.css
+++ b/src/App.css
@@ -89,45 +89,46 @@
     width: 100%;
   }
 
-  card {
-    border: #08d 1px solid;
+  .card {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    margin: 0;
-    width: 45%;
+    margin: 1vw;
+    width: 100%;
     height: auto;
-    padding: 100px;
     border-radius: 5px;
-    background-color: lightblue;
+    text-align: center;
+    font-family: arial;
+
   }
 
-  card img{
-    width:100%;
-    height: 100%;
+  .card img{
+    width: 25vw;
+    height: auto;
+    border-radius: 5px;
+    border: 0;
+    box-sizing: border-box;
+    color: #eee;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
-  .rentalContainer{
+
+  .rentalContainer ul{
     display: flex;
-    align-items: center;
     justify-content: space-around;
-    margin: 0;
+    flex-direction: row;
     width: 100%;
     height: auto;
-    padding: 100px;
     border-radius: 5px;
     background-color: lightblue;
+  }
+  .rentdet{
+   text-align: left;
+   display: flex;
+   flex-direction: column;
+    justify-content: flex-start;
   }
 
-  .rentdet{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 9px;
-    width: 100%;
-    height: auto;
-    /* padding: 20px; */
-    border-radius: 5px;
-    background-color: lightblue;
+  .container {
+    margin: 20px;
   }
-    
