--- a/src/App.css
+++ b/src/App.css
@@ -474,13 +474,8 @@ align-items: left;
   border-top: 1px solid #ccc;
 }
 
-.search{
-  height: 20vw;
-  margin-top: 20px;
-}
-
 .search input{
-  width: 65%;
+  width: 100%;
   height: 50px;
   border-radius: 5px;
   text-align: bottom;
@@ -503,5 +498,102 @@ align-items: left;
   border: 2px solid #eee;
   margin-right: 10px;
 }
+.rental-list{
+ height: 100%;
+ width: 100%;
+ overflow-y: scroll;
+ overflow-x: hidden;
+ margin-top: 100px;
+}
+input[type="radio"]{
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid #eee;
+}
 
+input[type="radio"]:checked{
+  border: 2px solid blue;
+}
+
+input[placeholder="search"]{
+  color: #999;
+  font-size: 14px;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-radius: 50%;
+  border: 2px solid #eee;
+}
+
+.search{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.filtre__input{
+  display: flex;
+  flex-direction: column;
+}
+.updateForm{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  z-index: 1;
+  overflow-x: hidden;
+  display: block;
+}
+.updateform{
+  width: 60%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.updateForm input{
+  width: 100%;
+  box-sizing: border-box;
+  height: 50px;
+  border-radius: 5px;
+  text-align: bottom;
+  font-family: arial;
+  background-color: lavender;
+  color: black;
+  padding: 1vw;
+  box-shadow: 0 14px 15px 0 rgba(0, 0, 0, 0.2);
+}
+
+.updateForm input:focus{
+  outline: none;
+}
+
+.button{
+  color: #06b;
+  background-color: white;
+  border-radius: 5px;
+  border: 1px solid #06b;
+  padding: 1vw;
+  box-shadow: 0 14px 15px 0 rgba(0, 0, 0, 0.2);
+}
+
+
+.rdrDefinedRangesWrapper {
+  display: none !important;
+}
+
+.rdrDefinedRanges {
+  display: none!important;
+}
+.rdrDateDisplayItem input {
+  width: 100%;
+  box-sizing: border-box;
+}
 
