--- a/src/App.css
+++ b/src/App.css
@@ -647,19 +647,24 @@ input[placeholder="search"]{
 }
 .cardBook{
  margin: 10px;
- width: 25vw;
+ width: 22vw;
+ padding: 10px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border: 1px solid #06b;
+  box-shadow: 0 14px 15px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px;
 }
 
 .card-body{
   display: flex;
-  width: 30vw;
+  width: 22vw;
   padding: 10px;
   flex-direction: column;
   box-sizing: border-box;
   justify-content: center;
   border-radius: 5px;
-  border: 1px solid #06b;
-  box-shadow: 0 14px 15px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
   margin: 10px;
   overflow: hidden;
 }
@@ -672,11 +677,12 @@ input[placeholder="search"]{
   align-items: center;
 }
 
-.profileListing{
+/* .profileListing{
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+} */
 
 .map{
   width: 90%;
@@ -775,5 +781,45 @@ table{
   border: 1px solid #06b;
   margin-right: 5px;
   color: #06b;
+
+}
+
+.viewButton{
+  width: 30px;
+  height: 30px;
+  font-size: 30px;
+  border-radius: 50%;
+  border: 1px solid #06b;
+  margin-right: 5px;
+  color: #06b;
+  background-color: white;
+  cursor: pointer;
+}
+
+.container{
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.search{
+  display: flex;
+  justify-content: center;
+  color: #06b;
+  font-size: 30px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.salebutt{
+  color: #06b;
+}
+.container{
+  margin-top: -30px;
+  padding-top: 30px;
+  padding-bottom: 50px;
+  width: 100%;
+  height: 100%;
+  display: block;
 
 }
